// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Separator Playground 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
      "width": "500px",
    }
  }
>
  <i
    className="Separator__StyledSeparator-y87nwe-0 fLtOsP"
  />
</div>
`;

exports[`Storyshots Separator With Label 1`] = `
<div
  style={
    Object {
      "padding": "2rem",
      "width": "500px",
    }
  }
>
  <i
    className="Separator__StyledSeparator-y87nwe-0 fLtOsP"
  >
    <span>
      O
    </span>
  </i>
</div>
`;
